# Railway-Rerouting

./: .env.example  .gitignore  README.md  WHAT_WE_BUILT.md  docker-compose.yml  intuition.md
data/: README.md
data/graph/: README.md  pyproject.toml
data/graph/cascadeguard_graph/: builder.py  rebuild.py  schema.py  store.py
data/graph/tests/: test_builder.py  test_schema.py  test_store_rebuild.py
data/ingestion/: README.md  pyproject.toml
data/ingestion/cascadeguard_ingest/: circuit_breaker.py  contracts.py
data/ingestion/cascadeguard_ingest/adapters/: __init__.py  coa_rtis_adapter.py  ntes_scrape.py  twin_adapter.py  weather_tsr.py
data/ingestion/cascadeguard_ingest/buffer/: store_forward.py
data/ingestion/cascadeguard_ingest/validation/: anomaly_gate.py  map_matching.py
data/ingestion/tests/: test_alternate_adapters.py  test_anomaly_gate.py  test_store_forward.py  test_twin_adapter.py
data/simulator/: README.md  pyproject.toml  run_twin.py
data/simulator/cascadeguard_sim/: calibration.py  engine.py  network.py  scenarios.py  timetable.py
data/simulator/config/: section.example.yaml
data/simulator/tests/: test_calibration.py  test_engine.py  test_network.py  test_scenarios.py  test_timetable.py
docs/: architecture.md  audit-00-verdict.md  audit-01-screening-feasibility.md  audit-02-architecture-deep-dive.md  audit-03-worth-winning-upgrades.md  audit-04-flaws-edge-cases.md  features.md  implementation-guide.md  problem-statement.md  session-context.md  workflow.md
frontend/: README.md
frontend/operator-dashboard/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/operator-dashboard/src/: main.tsx  styles.css  theme.ts
frontend/operator-dashboard/src/components/: CascadeChain.tsx  RiskHeatmap.tsx  StationDrilldown.tsx
frontend/operator-dashboard/src/lib/: api.ts  ws.ts
frontend/passenger-app/: .npmrc  README.md  app.json  babel.config.js  package-lock.json  package.json
frontend/passenger-app/app/: _layout.tsx  helpline.tsx  index.tsx  queries.tsx
frontend/passenger-app/components/: HelplineChat.tsx  QueryHistory.tsx  RerouteCard.tsx
frontend/passenger-app/lib/: api.ts  push.ts  speech.ts  theme.ts
frontend/passenger-pwa/: Dockerfile  README.md  package.json
frontend/passenger-pwa/public/: manifest.json
frontend/passenger-pwa/src/app/: page.tsx
frontend/passenger-pwa/src/app/helpline/: page.tsx
frontend/passenger-pwa/src/app/queries/: page.tsx
frontend/passenger-pwa/src/components/: HelplineChat.tsx  QueryHistory.tsx  RerouteCard.tsx
frontend/passenger-pwa/src/lib/: push.ts  speech.ts
infra/: README.md
infra/db/: init.sql
infra/redis/: redis.conf
infra/scripts/: run_demo.sh  setup.sh
iot/: README.md
ml/: README.md  pyproject.toml
ml/cascadeguard_ml/: inference.py  spec.py
ml/cascadeguard_ml/eval/: ablation.py  calibration.py
ml/cascadeguard_ml/explain/: gnn_explainer.py
ml/cascadeguard_ml/models/: hetero.py  layers.py  stgnn.py
ml/cascadeguard_ml/ood/: detector.py
ml/cascadeguard_ml/training/: data_module.py  losses.py  train.py
ml/cascadeguard_ml/uncertainty/: conformal.py
ml/configs/: stgnn.example.yaml
ml/tests/: conftest.py  test_data_module.py  test_eval.py  test_inference.py  test_model.py  test_training.py  test_uncertainty.py
services/: README.md
services/api/: Dockerfile  README.md  pyproject.toml
services/api/cascadeguard_api/: config.py  deps.py  main.py
services/api/cascadeguard_api/routers/: cascade.py  corridor.py  helpline.py  queries.py  reroute.py  stations.py  ws.py
services/api/cascadeguard_api/schemas/: models.py
services/api/tests/: test_api.py  test_helpline_api.py
services/helpline/: Dockerfile  README.md  pyproject.toml
services/helpline/cascadeguard_helpline/: agent.py  asr.py  authorities.py  authority_router.py  cases.py  dispatch.py  intent.py  passenger.py  tts.py
services/helpline/cascadeguard_helpline/config/: authorities.example.yaml
services/helpline/tests/: test_agent.py  test_understanding.py
services/llm-agent/: README.md  pyproject.toml
services/llm-agent/cascadeguard_llm/: client.py  phrasing.py  prompts.py
services/llm-agent/cascadeguard_llm/templates/: en.delay-bands.txt
services/llm-agent/tests/: test_phrasing.py
services/notifier/: README.md  pyproject.toml
services/notifier/cascadeguard_notify/: fcm.py  trigger.py
services/notifier/tests/: test_fcm.py  test_trigger.py
services/reroute-engine/: README.md  pyproject.toml
services/reroute-engine/cascadeguard_reroute/: allocator.py  feedback.py  routing.py  ticketing.py
services/reroute-engine/tests/: test_allocator.py  test_routing.py  test_ticketing.py
services/worker/: Dockerfile  README.md  pyproject.toml  run_pipeline.py
services/worker/cascadeguard_worker/: degradation.py  pipeline.py
services/worker/tests/: test_degradation.py  test_pipeline.py
shared/: README.md  validate.py
shared/schemas/: events.schema.json  grievance.schema.json  prediction.schema.json
shared/schemas/examples/: event.sample.json  grievance.sample.json  prediction.sample.json
tests/: README.md
tests/e2e/: test_demo_scenarios.py
