[project]
name = "cascadeguard-ingest"
version = "0.0.0"
description = "CascadeGuard ingestion — source adapters, validation/anomaly gate, store-and-forward buffer."
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0",
    "pydantic>=2.6",
    "numpy>=1.26",
    "httpx>=0.27",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "cascadeguard_ingest",
    "cascadeguard_ingest.adapters",
    "cascadeguard_ingest.validation",
    "cascadeguard_ingest.buffer",
]
