[project]
name = "cascadeguard-api"
version = "0.0.0"
description = "CascadeGuard FastAPI service — REST + WebSocket + Corridor Risk API."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "redis>=5.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cascadeguard_api", "cascadeguard_api.routers", "cascadeguard_api.schemas"]
