[project]
name = "cascadeguard-llm"
version = "0.0.0"
description = "CascadeGuard LLM phrasing agent — Claude API, template-first and async."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cascadeguard_llm"]
