[project]
name = "cascadeguard-notify"
version = "0.0.0"
description = "CascadeGuard notifier — cost-sensitive trigger + FCM push delivery."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "firebase-admin>=6.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cascadeguard_notify"]
