[project]
name = "cascadeguard-worker"
version = "0.0.0"
description = "CascadeGuard worker — orchestrates the runtime pipeline and graceful degradation."
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cascadeguard_worker"]
